# NoteAI-OpenAI

./: README.md
FastAPI-OpenAI/: main.py  pyproject.toml
node-server/: index.js  package-lock.json  package.json
node-server/controllers/: auth.js  promptai.js
node-server/models/: User.js
node-server/routes/: auth.js  promptai.js
react-client/: colors.txt  package-lock.json  package.json
react-client/src/: App.js  index.js
react-client/src/Pages/: DashBoard.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  index.js
react-client/src/State/: state.js
react-client/src/components/: index.js
react-client/src/components/Chat/: Chat.jsx
react-client/src/components/ChatArea/: ChatArea.jsx
react-client/src/components/ChatHierarchy/: ChatHierarchy.jsx
react-client/src/components/Form/: Form.jsx
react-client/src/components/Header/: Header.jsx
react-client/src/components/Hierarchy/: Hierarchy.jsx
react-client/src/components/LoginForm/: LoginForm.jsx
react-client/src/components/WritingArea/: WritingArea.jsx
react-client/src/middleware/: auth.js
react-client/src/state/: index.js
