[tool.poetry]
name = "openai-imageapi"
version = "0.1.0"
description = ""
authors = ["isaacdenny <isaacquinndenny@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_imageapi"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.26.0"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
dotenv = "^0.0.5"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
